# vqa-rlvr

./: .gitignore  README.md  evaluate.py  prepare_data.py  pyproject.toml  train_grpo.py  train_sft.py
data/: manifest.json
demo/: README.md
demo/backend/: app.py  model_manager.py
demo/frontend/: index.html  package-lock.json  package.json  screenshot.mjs  tailwind.config.js
demo/frontend/src/: App.tsx  index.css
demo/frontend/src/components/: Arena.tsx  Dashboard.tsx  ModelCard.tsx
demo/frontend/src/lib/: api.ts
results/: crosscheck.md  judge_study.json
results/runs/: grpo_2b_clevr_base_reasoning-clevr.json  grpo_2b_clevr_base_reasoning-gqa.json  grpo_2b_clevr_base_reasoning-textvqa.json  grpo_2b_clevr_base_reasoning-vqav2.json  grpo_2b_clevr_reasoning-clevr.json  grpo_2b_fmt05_reasoning-clevr.json  grpo_2b_fmt05_reasoning-gqa.json  grpo_2b_fmt05_reasoning-vqav2.json  grpo_2b_fmt0_reasoning-clevr.json  grpo_2b_fmt0_reasoning-gqa.json  grpo_2b_fmt0_reasoning-vqav2.json  grpo_2b_gqaonly_reasoning-clevr.json  grpo_2b_gqaonly_reasoning-gqa.json  grpo_2b_gqaonly_reasoning-textvqa.json  grpo_2b_gqaonly_reasoning-vqav2.json  grpo_2b_main_base-clevr.json  grpo_2b_main_base-gqa.json  grpo_2b_main_base-textvqa.json  grpo_2b_main_base-vqav2.json  grpo_2b_main_base_reasoning-clevr.json  grpo_2b_main_base_reasoning-gqa.json  grpo_2b_main_base_reasoning-textvqa.json  grpo_2b_main_base_reasoning-vqav2.json  grpo_2b_main_sft-clevr.json  grpo_2b_main_sft-gqa.json  grpo_2b_main_sft-textvqa.json  grpo_2b_main_sft-vqav2.json  grpo_2b_main_sft_reasoning-clevr.json  grpo_2b_main_sft_reasoning-gqa.json  grpo_2b_main_sft_reasoning-textvqa.json  grpo_2b_main_sft_reasoning-vqav2.json  grpo_2b_vqav2only_reasoning-clevr.json  grpo_2b_vqav2only_reasoning-gqa.json  grpo_2b_vqav2only_reasoning-textvqa.json  grpo_2b_vqav2only_reasoning-vqav2.json  grpo_8b_main-PLACEHOLDER.json  sft_2b-clevr.json  sft_2b-gqa.json  sft_2b-textvqa.json  sft_2b-vqav2.json  (+32 more)
scripts/: eval_nanovlm.py  judge_study.py  make_tables.py  merge_adapter.py  push_to_hub.py  rescore.py
tests/: test_data.py  test_inference.py  test_judge.py  test_metrics.py  test_rewards.py  test_smoke.py
vqar/: __init__.py  config.py  data.py  inference.py  judge.py  metrics.py  rewards.py
