[project]
name = "vqa-rlvr"
version = "0.1.0"
description = "Post-training Qwen3-VL for visual question answering: QLoRA SFT + GRPO-based RLVR on a single RTX 4090, benchmarked on VQAv2 / GQA / CLEVR"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Guangbo Yu", email = "ygbuestc@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "torch",
    # Direct deps (though only vllm needs them) so tool.uv.sources can pin them to cu128.
    "torchvision",
    "torchaudio",
    "transformers>=4.57",
    "trl>=1.8",
    "peft>=0.19",
    "bitsandbytes>=0.45",
    "datasets>=3.0",
    "accelerate>=1.0",
    "vllm>=0.16,<=0.23",  # TRL 1.8's supported window for GRPO colocate mode
    "qwen-vl-utils",
    "wandb",
    "anthropic",
    "pillow",
    "hf-transfer>=0.1.9",
]

[dependency-groups]
demo = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]
dev = ["pytest>=8.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vqar"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"demo/backend/*" = ["B008"]  # FastAPI's File(...)/Form(...) defaults are idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# The WSL2 NVIDIA driver exposes CUDA 12.8; the default PyPI builds of torch 2.11 and
# vllm 0.23 are CUDA 13 and fail at runtime. CUDA 12.x minor-version compatibility lets
# cu129 builds run on the 12.8 driver, so the whole stack is pinned to cu129.
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
vllm = { url = "https://github.com/vllm-project/vllm/releases/download/v0.23.0/vllm-0.23.0+cu129-cp38-abi3-manylinux_2_28_x86_64.whl" }
